--- a/css/index.css
+++ b/css/index.css
@@ -2,24 +2,31 @@
     box-sizing: border-box !important;
     padding: 0;
     margin: 0;
-    text-transform: capitalize !important;
+    
 }
+
 
 header{
     width: 100%;
-    min-height:600px ;
+    min-height:100vh;
     background-image: url("../imgs/kemooz-back.png");
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-position: center;
     background-size: cover;
     text-align: center;
+    font-family: 'Roboto', sans-serif !important;
 }
-
+.intro-row{
+    display: flex !important;
+    justify-content: space-between !important;
+    flex-direction: row !important;
+    flex-wrap: wrap;
+}
 .desc{
     color: white;
     margin-top: 20% !important;
-    text-align: center !important;
+    text-align: left !important;
 }
 
 .desc h2{
@@ -49,12 +56,16 @@ header{
 .desc .myimg{
     margin-left: auto !important;
     margin-right: auto !important;
+    
 }
 
 .myimg img{
-    width: 100%;
+    width: 80%;
     animation-name: img;
     animation-duration: 7s;
+    border-radius: 50%;
+    height: 400px;
+    margin-top: 25% !important;
 }
 
 
@@ -74,12 +85,12 @@ header{
 .desc button{
     margin-bottom: 10px;
 }
-@media (min-width:1000px) {
+/* @media (min-width:1000px) {
     .desc button{
         margin-left: auto !important;
         margin-right: auto !important;
     }
-}
+} */
 
 h4{
     color: gray !important;
