--- a/css/nav.css
+++ b/css/nav.css
@@ -13,13 +13,44 @@
     }
 }
 
-nav{
+/* nav{
     text-align: center !important;
     z-index: 30 !important;
     background-color: transparent !important;
     color: white !important;
+    font-family: 'Roboto', sans-serif !important;
     padding-top: 20px !important;
-}
+} */
+
+nav {
+    text-align: center !important;
+    z-index: 30 !important;
+    background-color: transparent !important;
+    color: white !important;
+    font-family: 'Roboto', sans-serif !important;
+    padding-top: 20px !important;
+    transition: background-color 0.5s ease-in-out;
+  }
+  
+  nav.fixed {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    background-color: rgba(0, 0, 0, 0.87) !important;
+    border-bottom-left-radius: 30px;
+    border-bottom-right-radius: 30px;
+    box-shadow: rgba(255, 255, 255, 0.1) 0px 1px 1px 0px inset, rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
+  }
+  
+  .navbar-default {
+    background-color: transparent !important;
+  }
+  
+  .navbar-default.fixed {
+    background-color: black !important;
+  }
+
 
 .logo{
     border-radius: 50%;
@@ -27,6 +58,7 @@ nav{
 
 .menue-links .link{
     font-size: 18px;
+    letter-spacing: 2px !important;
     font-weight: 600;
     color: black;
     padding: 20px !important;
@@ -79,7 +111,7 @@ button a{
 }
 
 .button-72:hover {
-  background-image: linear-gradient(#FA4D12, #802709 50%);
+  background-image:  linear-gradient(#1628E0, #111752b2 50%);
 }
 
 @media (min-width: 768px) {
