--- a/css/certificates.css
+++ b/css/certificates.css
@@ -4,7 +4,7 @@
 }
 
 .cert-title{
-    margin-bottom: 150px;
+    margin-bottom: 100px;
     font-size: 6rem;
     font-weight: bold;
     font-style: italic;
@@ -14,7 +14,8 @@
 @media (max-width:1000px) {
     .cert-title{
         margin-bottom: 150px;
-        font-size: 50px !important;
+        font-size: 30px !important;
+        text-align: center;
     }
 }
 .cert-title span{
@@ -23,8 +24,24 @@
 
 .certificate{
     max-width: 320px;
-    margin: 100px auto !important;
+    margin: 60px auto !important;
 }
+
+@media (min-width:280px) and (max-width:653px) {
+    .certificate{
+        max-width: 200px;
+        margin: 60px auto !important;
+    }
+}
+
+@media (min-width:350px) {
+    .certificate{
+        max-width: 250px;
+        margin: 60px auto !important;
+    }
+}
+
+
 
 .certificate img{
     width: 100%;
@@ -34,11 +51,15 @@
 }
 
 .pos-rotate{
-    rotate: 20deg;
+    -webkit-transform: rotate(20deg); /* Safari, older versions of Chrome */
+    -ms-transform: rotate(20deg); /* Internet Explorer */
+    transform: rotate(20deg); /* Standard */
 }
 
 .neg-rotate{
-    rotate: -20deg;
+    -webkit-transform: rotate(-20deg); /* Safari, older versions of Chrome */
+    -ms-transform: rotate(-20deg); /* Internet Explorer */
+    transform: rotate(-20deg); /* Standard */
 }
 
 .certificate img:hover{
