--- a/css/experience.css
+++ b/css/experience.css
@@ -15,8 +15,9 @@
 
 @media (max-width:1000px) {
     .exp-title{
-        margin-bottom: 150px;
-        font-size: 50px !important;
+        margin-bottom: 60px;
+        font-size: 30px !important;
+        text-align: center;
     }
 }
 
