--- a/css/projects.css
+++ b/css/projects.css
@@ -5,7 +5,7 @@
 }
 
 .projects h1{
-    margin-bottom: 150px;
+    margin-bottom: 100px;
     font-size: 6rem;
     font-weight: bold;
     font-style: italic;
@@ -14,10 +14,12 @@
 
 @media (max-width:1000px) {
     .projects h1{
-        margin-bottom: 150px;
-        font-size: 60px !important;
+        margin-bottom: 60px;
+        font-size: 40px !important;
+        text-align: center;
     }
 }
+
 .project{
     max-width: 80% !important;
     margin: 30px auto !important;
