--- a/css/who.css
+++ b/css/who.css
@@ -6,13 +6,20 @@
 }
 
 .whotitle{
-    margin-bottom: 150px;
+    margin-bottom: 100px;
     font-size: 6rem;
     font-weight: bold;
     font-style: italic;
     font-family: 'Young Serif', serif;
 }
 
+@media (max-width:800px) {
+    .whotitle{
+        margin-bottom: 60px;
+        font-size: 30px;
+        text-align: left;
+    }
+}
 .whotitle span,.skillstitle span,.projecttitle span{
     color: #ff9f10;
 
