--- a/css/who.css
+++ b/css/who.css
@@ -64,13 +64,15 @@
     border: none;
 }
 
-.cv a{
+.cv {
     text-decoration: none;
     color: black;
+
 }
 
 .cv:hover{
     box-shadow:   #ff9f1098 3px 3px 6px;
+    color: black;
 }
 
 
