--- a/css/certificates.css
+++ b/css/certificates.css
@@ -25,6 +25,7 @@
 .certificate{
     max-width: 320px;
     margin: 60px auto !important;
+    box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
 }
 
 @media (min-width:280px) and (max-width:653px) {
