--- a/css/projects.css
+++ b/css/projects.css
@@ -42,6 +42,7 @@
     font-size: 20px;
     font-weight: 500;
     padding: 10px;
+    box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
     
 }
 
@@ -61,5 +62,9 @@
     font-size: 20px;
     font-weight: bold;
     color: #ff9f10;
+    text-align: center;
 }
 
+.detailsParagraph{
+    text-align: left ;
+}
