--- a/css/skills.css
+++ b/css/skills.css
@@ -44,3 +44,9 @@
     outline: none;
     box-shadow: rgb(38, 57, 77) 0px 12px 20px -10px;
 }
+
+.skillIcon{
+    width: 200px;
+    height: 200px;
+    margin-bottom: 50px;
+}
