--- a/css/skills.css
+++ b/css/skills.css
@@ -45,8 +45,12 @@
     box-shadow: rgb(38, 57, 77) 0px 12px 20px -10px;
 }
 
+
 .skillIcon{
     width: 200px;
     height: 200px;
     margin-bottom: 50px;
+    display: block;
+    margin-left: auto !important;
+    margin-right: auto !important;
 }
